js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-gen-await-empty-str-is-valid-assign-expr.js
async
function
*
f
(
)
{
await
import
(
'
'
)
}
reportCompare
(
0
0
)
;
