js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-await-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
await
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
